Fix wrapping on media that's text.

--- a/asset/scss/collecting.scss
+++ b/asset/scss/collecting.scss
@@ -305,6 +305,11 @@ a.site-title {
   display: inline-flex;
 }
 
+.resource.show .media-render > a:only-child {
+  line-height: 1;
+  word-wrap: break-word;
+}
+
 .item.show .institution img {
   height: 3 * $global-padding;
   width: auto;
